--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,31 @@
     <title>Leaderboard</title>
   </head>
   <body>
-    <h1>Leaderboard</h1>
+    <header class="title">
+      <h1>Leaderboard</h1>
+    </header>
+    <section class="main">
+      <div class="score-container">
+        <div class="recent">
+          <h2>Recent scores</h2>
+          <button class="refresh" type="button">Refresh</button>
+        </div>
+        <ul class="score-list"></ul>
+      </div>
+      <div class="add-score">
+        <form class="user-input">
+          <h2>Add your score</h2>
+          <input type="text" placeholder="Your name" class="user-name" />
+          <input
+            type="text"
+            placeholder="Your score"
+            id="a"
+            class="user-score"
+          />
+          <button class="user-submit" type="button">Submit</button>
+        </form>
+      </div>
+    </section>
+    <footer>footer text</footer>
   </body>
 </html>
