Change styles for footer

--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,7 @@
         <form class="user-input">
           <h2>Add your score</h2>
           <input type="text" placeholder="Your name" class="user-name" />
-          <input
-            type="text"
-            placeholder="Your score"
-            id="a"
-            class="user-score"
-          />
+          <input type="text" placeholder="Your score" class="user-score" />
           <button class="user-submit" type="button">Submit</button>
         </form>
       </div>
