--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <title>Leaderboard</title>
   </head>
   <body>
@@ -26,6 +30,12 @@
         </form>
       </div>
     </section>
-    <footer>footer text</footer>
+    <footer>
+      <p>Contact Me</p>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a target="”_blank”" href="https://github.com/Berkay-akbas"
+        ><i class="fab fa-github"></i
+      ></a>
+    </footer>
   </body>
 </html>
